# phosx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish-to-pypi.yml
phosx/: activation_evidence.py  cli.py  kinase_activity.py  make_seqrnk.py  phosx.py  pssm_enrichment.py  pssm_enrichments.py  pssms.py  utils.py
phosx/data/: PSSMs.h5  S_T_PSSMs.h5  Y_PSSMs.h5  kinase_metadata.h5  kinase_metadata_annotated.h5  pssm.h5
tests/: run_phosx.py  test_kinase_activities.py  test_make-seqrnk.sh  test_phosx.py  test_phosx.sh
tests/p_list/: 15_3.tsv
tests/seqrnk/: 378_111.seqrnk  koksal2018_log2.fold.change.8min.seqrnk  ser_thr_only_trametinib_vs_untreated_WT.seqrnk
